--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
 
+a {
+	text-decoration: none;
+	color: #dd9933;
+}
+
+a:hover {
+	color: #b9b9c8;
+}
+
 img {
   max-width: 100%;
   height: auto;
