--- a/src/containers/ResultInfoPage.css
+++ b/src/containers/ResultInfoPage.css
@@ -25,7 +25,19 @@
 }
 
 .indent {
-	padding-left: 10px;
+  padding: 10px;
+  background: #eee;
+}
+
+.sections-imdb {
+  padding: 10px;
+  background: #f3dc59;
+  color: #000;
+}
+
+.sections-imdb .indent {
+	background: #333;
+	color: #fff;
 }
 
 .sections {
